# pedidos/models.py
from django.db import models
from ventas.models import Cliente

# Proveedor
class Proveedor(models.Model):
    id_proveedor = models.AutoField(primary_key=True)
    nombre = models.CharField(max_length=100)
    contacto = models.CharField(max_length=100)
    producto = models.CharField(max_length=100)
    condiciones_pago = models.TextField()

    def __str__(self):
        return self.nombre

# Pedido
class Pedido(models.Model):
    ESTADO_CHOICES = [
        ('Pendiente', 'Pendiente'),
        ('Recibido', 'Recibido'),
        ('Cancelado', 'Cancelado'),
    ]

    id_pedido = models.AutoField(primary_key=True) 
    proveedor = models.ForeignKey(Proveedor, on_delete=models.CASCADE)
    producto = models.CharField(max_length=100)
    cantidad = models.IntegerField()
    valor = models.DecimalField(max_digits=10, decimal_places=2)
    estado = models.CharField(max_length=15, choices=ESTADO_CHOICES, default='Pendiente')
    iva = models.DecimalField(max_digits=10, decimal_places=2)
    total = models.DecimalField(max_digits=10, decimal_places=2)
    fecha_pedido = models.DateField()

    def __str__(self):
        return f"Pedido {self.id_pedido} - {self.proveedor}"